--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,28 +3,22 @@ layout: default
 ---
 
 <div class="home">
+
+  <h1 class="page-title">{{ page.title }}</h1>
+
+  <p>{{ content }}</p>
+
   <h2>최신 글</h2>
 
   <ul class="post-list">
-    {% for post in paginator.posts %}
-      <li>
-        <a href="{{ post.url | relative_url }}">
-          <h3>{{ post.title }}</h3>
-        </a>
-        <p class="post-date">{{ post.date | date: "%Y-%m-%d" }}</p>
-        <p>{{ post.description }}</p>
-      </li>
+    {% for post in site.posts %}
+    <li>
+      <a href="{{ post.url | prepend: site.baseurl }}">
+        {{ post.title }}
+      </a>
+      <span class="post-date">{{ post.date | date: "%Y-%m-%d" }}</span>
+    </li>
     {% endfor %}
   </ul>
 
-  {% if paginator.total_pages > 1 %}
-  <div class="pagination">
-    {% if paginator.previous_page %}
-      <a href="{{ paginator.previous_page_path | relative_url }}">이전</a>
-    {% endif %}
-    {% if paginator.next_page %}
-      <a href="{{ paginator.next_page_path | relative_url }}">다음</a>
-    {% endif %}
-  </div>
-  {% endif %}
 </div>
