--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: default
   <h1>{{ page.title }}</h1>
   <p class="post-date">{{ page.date | date: "%Y-%m-%d" }}</p>
 
-  <div class="post-content">
-    {{ content }}
+<article class="post-body">
+  {{ content | markdownify }}
   </div>
 </article>
