--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,23 +2,28 @@
 layout: default
 ---
 
-<div class="home">
+<section>
+  <h2 class="section-title">최신 글</h2>
 
-  <h1 class="page-title">{{ page.title }}</h1>
+  <div class="post-list">
 
-  <p>{{ content }}</p>
-
-  <h2>최신 글</h2>
-
-  <ul class="post-list">
     {% for post in site.posts %}
-    <li>
-      <a href="{{ post.url | prepend: site.baseurl }}">
-        {{ post.title }}
-      </a>
-      <span class="post-date">{{ post.date | date: "%Y-%m-%d" }}</span>
-    </li>
-    {% endfor %}
-  </ul>
+    <article class="post-item">
+      <h3>
+        <a href="{{ post.url | relative_url }}">{{ post.title }}</a>
+      </h3>
 
-</div>
+      <p class="post-date">{{ post.date | date: "%Y-%m-%d" }}</p>
+
+      <div class="post-excerpt">
+        {{ post.excerpt | markdownify }}
+      </div>
+    </article>
+    {% endfor %}
+
+    {% if site.posts == empty %}
+      <p>아직 작성된 글이 없습니다.</p>
+    {% endif %}
+
+  </div>
+</section>
