--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,11 +2,14 @@
 layout: default
 ---
 
-<article class="post">
-  <h1>{{ page.title }}</h1>
+<article class="single-post">
+
+  <h1 class="post-title">{{ page.title }}</h1>
+
   <p class="post-date">{{ page.date | date: "%Y-%m-%d" }}</p>
 
-<article class="post-body">
-  {{ content | markdownify }}
+  <div class="post-body">
+    {{ content | markdownify }}
   </div>
+
 </article>
