--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+  <meta charset="utf-8">
+  <meta name="google-site-verification" content="xxxxxx" />
+  {{ site.seo }}
+  <link rel="stylesheet" href="{{ '/assets/style.css' | relative_url }}">
+
   {% seo %}
 
   <link rel="stylesheet" href="{{ '/assets/style.css' | relative_url }}">
